--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import "styles/TopNavBar.css";
 @import "styles/App.css";
 @import "styles/ShotChart.css";
+@import "styles/Profile.css";
+@import "styles/Main.css";
 
 body {
   margin: 0;
